OSC : Add Filter , reset to big OSC Message queue

--- a/Builds/VisualStudio2015/LGML_App.vcxproj.filters
+++ b/Builds/VisualStudio2015/LGML_App.vcxproj.filters
@@ -3183,6 +3183,9 @@
     <ClInclude Include="..\..\Source\Controller\ControllerFactory.h">
       <Filter>LGML\Source\Controller</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Controller\NamespaceFBFilter.h">
+      <Filter>LGML\Source\Controller</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Controller\ControllerManager.h">
       <Filter>LGML\Source\Controller</Filter>
     </ClInclude>
