split implementations of MinMaxParam and QueuedNotifier : Faster compile time Preset load on calling thread (to keep consistency of messages sent just after preset loading) remove preset name from session file (not recalled anyway) Queued notifier handle edge case (race condition due to quick changes)

--- a/Builds/VisualStudio2015/LGML_App.vcxproj.filters
+++ b/Builds/VisualStudio2015/LGML_App.vcxproj.filters
@@ -574,6 +574,9 @@
     <ClCompile Include="..\..\Source\Controllable\ControllableUIHelpers.cpp">
       <Filter>LGML\Source\Controllable</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\Source\Controllable\Parameter\MinMaxParameter.cpp">
+      <Filter>LGML\Source\Controllable\Parameter</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\Source\Controllable\Parameter\FileParameter.cpp">
       <Filter>LGML\Source\Controllable\Parameter</Filter>
     </ClCompile>
@@ -3465,6 +3468,12 @@
     <ClInclude Include="..\..\Source\UI\Inspector\InspectorEditor.h">
       <Filter>LGML\Source\UI\Inspector</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\Source\Utils\QueuedNotifierImp.hpp">
+      <Filter>LGML\Source\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Source\Utils\QueuedNotifier.h">
+      <Filter>LGML\Source\Utils</Filter>
+    </ClInclude>
     <ClInclude Include="..\..\Source\Utils\VersionTriplet.h">
       <Filter>LGML\Source\Utils</Filter>
     </ClInclude>
@@ -3502,9 +3511,6 @@
       <Filter>LGML\Source\Utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Utils\NetworkUtils.h">
-      <Filter>LGML\Source\Utils</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\Source\Utils\QueuedNotifier.h">
       <Filter>LGML\Source\Utils</Filter>
     </ClInclude>
     <ClInclude Include="..\..\Source\Utils\ProgressNotifier.h">
