--- a/Builds/LinuxMakefile/Makefile
+++ b/Builds/LinuxMakefile/Makefile
@@ -76,6 +76,7 @@ OBJECTS_APP := \
   $(JUCE_OBJDIR)/Controllable_a0f8da50.o \
   $(JUCE_OBJDIR)/ControllableContainer_a2acad5b.o \
   $(JUCE_OBJDIR)/ControllableUIHelpers_49826e4b.o \
+  $(JUCE_OBJDIR)/MinMaxParameter_93316b74.o \
   $(JUCE_OBJDIR)/FileParameter_be7c65ea.o \
   $(JUCE_OBJDIR)/UndoableHelper_584c3b19.o \
   $(JUCE_OBJDIR)/ParameterContainerSync_5c3cffa0.o \
@@ -288,6 +289,11 @@ $(JUCE_OBJDIR)/ControllableContainer_a2acad5b.o: ../../Source/Controllable/Contr
 $(JUCE_OBJDIR)/ControllableUIHelpers_49826e4b.o: ../../Source/Controllable/ControllableUIHelpers.cpp
 	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
 	@echo "Compiling ControllableUIHelpers.cpp"
+	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
+
+$(JUCE_OBJDIR)/MinMaxParameter_93316b74.o: ../../Source/Controllable/Parameter/MinMaxParameter.cpp
+	-$(V_AT)mkdir -p $(JUCE_OBJDIR)
+	@echo "Compiling MinMaxParameter.cpp"
 	$(V_AT)$(CXX) $(JUCE_CXXFLAGS) $(JUCE_CPPFLAGS_APP) $(JUCE_CFLAGS_APP) -o "$@" -c "$<"
 
 $(JUCE_OBJDIR)/FileParameter_be7c65ea.o: ../../Source/Controllable/Parameter/FileParameter.cpp
