CI WIN : try circleci

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,10 +17,10 @@ environment:
     #   PTHREAD: x86
     #   configuration: Release32
     #   COMPILER: "Visual Studio 14 2015"
-    - platform: x64
-      PTHREAD: x64
-      configuration: Debug
-      COMPILER: "Visual Studio 14 2015 Win64"
+    # - platform: x64 ## debug seems broken on appveyor...
+    #   PTHREAD: x64
+    #   configuration: Debug
+    #   COMPILER: "Visual Studio 14 2015 Win64"
     - platform: x64
       PTHREAD: x64
       configuration: Release
@@ -60,7 +60,6 @@ install:
     - cmake -G "%COMPILER%" -DPD_MULTI=ON -DPD_EXTRA=ON ..
     - msbuild libpd.sln /t:libpdstatic /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM%
 
-  
 
 before_build:
     - cd C:\projects\lgml\third_party\rubberband
