--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ jobs:
             cd ..
             set ROOT_FOLDER=%cd%
             set ASIOSDK=%ROOT_FOLDER%\ASIOSDK2.3
+            echo %LGML_FOLDER%\third_party\
             cd %LGML_FOLDER%\third_party\
             echo "start build of PTW32"
             
@@ -33,7 +34,7 @@ jobs:
             sed -i 's/MultiThreadedDebugDLL/MultiThreadedDebug/' pthread_lib.2015.vcxproj
             echo "truly building PTW32"
             
-            msbuild pthread.2015.sln /t:pthread_lib /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM% /p:OutDir=lib/
+            MSBuild.exe pthread.2015.sln /t:pthread_lib /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM% /p:OutDir=lib/
             
             echo "Copy pthread-win32 headers and library in pure-data directory"
             
@@ -49,12 +50,12 @@ jobs:
             
             cd %PD_BUILD_DIR%\VisualStudio2015
             cmake -G "%COMPILER%" -DPD_MULTI=ON -DPD_EXTRA=ON ..
-            msbuild libpd.sln /t:libpdstatic /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM%
+            MSBuild.exe libpd.sln /t:libpdstatic /nologo /verbosity:quiet /p:Configuration=Release /p:Platform=%PLATFORM%
             
             
             cd %LGML_FOLDER%\third_party\rubberband
             echo 'building rubberband'
-            msbuild %LGML_FOLDER%\third_party\rubberband\rubberband-library.sln /p:Configuration=Release /m:4
+            MSBuild.exe %LGML_FOLDER%\third_party\rubberband\rubberband-library.sln /p:Configuration=Release /m:4
             echo 'dowloading JUCE'
             cd %LGML_FOLDER%
             curl https://codeload.github.com/WeAreROLI/JUCE/zip/master -o JUCE.zip
@@ -70,7 +71,7 @@ jobs:
             python %LGML_FOLDER%\Scripts\buildScript.py --configure --os=windows --configuration=%CONFIGURATION% --arch=%PLATFORM%  --exportpath=%LGML_FOLDER%
             
             echo "building lgml"
-            msbuild %LGML_FOLDER%\Builds\VisualStudio2015\LGML.sln /p:Configuration=%CONFIGURATION% /p:Platform=%PLATFORM%
+            MSBuild.exe %LGML_FOLDER%\Builds\VisualStudio2015\LGML.sln /p:Configuration=%CONFIGURATION% /p:Platform=%PLATFORM%
             
             echo "packing lgml"
             python %LGML_FOLDER%\Scripts\buildScript.py --package --export
