ParameterBase : add isType Method ParameterProxy : make sure fastMap is the first listener notified StackedContainer : start drag only on true mouse drag Minor Code Aesthetics

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,8 +10,12 @@
             "args": [
                 "-j12"
             ],
+            
             "options": {
-                "cwd": "${workspaceFolder}/Builds/LinuxMakefile/"
+                "cwd": "${workspaceFolder}/Builds/LinuxMakefile/",
+                "env":{
+                    "DEBUG":"1"
+                }
             },
             "problemMatcher": {
                 "base": "$gcc",
