--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,8 @@ jobs:
       - run:
           name: build and package LGML OSX
           command: |
+            python3 Scripts/buildScript.py --configure --exportpath=/tmp/buildOSX/64Debug/ --os=osx --configuration=Debug --arch=x86_64
+            python3 Scripts/buildScript.py --build --package --export
             python3 Scripts/buildScript.py --configure --exportpath=/tmp/buildOSX/64Beta/ --os=osx --configuration=Beta --arch=x86_64
             python3 Scripts/buildScript.py --build --package --export
             python3 Scripts/buildScript.py --configure --exportpath=/tmp/buildOSX/64/ --os=osx --configuration=Release --arch=x86_64
